# ass-workshop

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-todo-cli/: spec.md
src/todo_cli/: __init__.py  main.py  models.py  storage.py
tests/: test_cli.py
