[tool.poetry]
name = "todo-cli"
version = "0.1.0"
description = "Simple CLI todo manager"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
